# agnostic_communication_platform

./: .gitignore  main.py  pyproject.toml
acp_input/: __init__.py  acp_input.py  keyboard.py  terminal.py
acp_interface/: __init__.py  acp_interface.py  colors.py  terminal.py  visual.py
acp_output/: __init__.py  acp_output.py  file.py  terminal.py  tts.py
layouts/: qwerty_es_ES.json
