[tool.poetry]
name = "agnostic_communication_platform"
version = "0.0.1"
description = "Speak to the world however you want"
authors = ["Daniel Ruckert Garcia <daniel@betterplaceapp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
